# dearpygui_drawings

./: Lipatova.py  README.md  __main__.py  dragon.py  mandelbrot.py  pyproject.toml
Mikh_Ilya/: gui.py  gui_rl.py  point.py  vector.py
anri_tabuev/: dragon.py
entrimail/: fractal.py  fractal_render_loop.py
golovkov/: __main__.py  pyf.py
lindy2076_vicsek/: __main__.py
lipatova/: sierpinski.py
luvelayn/: newton_fractal.py
merirut/: GosperCurve.py
nilisav/: mandelbrot.py
shanin/: README.md  pyproject.toml
shanin/fractal/: __main__.py
